# CRM-SaaS

./: -  .dockerignore  .env.example  .gitignore  API_IMPLEMENTATION_COMPLETE.md  API_IMPLEMENTATION_SUMMARY.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
apps/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/activities/: models.py  serializers.py  urls.py  views.py
apps/companies/: models.py  serializers.py  urls.py  views.py
apps/contacts/: models.py  serializers.py  urls.py  views.py
apps/customization/: models.py  serializers.py  urls.py  views.py
apps/dashboard/: models.py  serializers.py  urls.py  views.py
apps/emails/: models.py  serializers.py  urls.py  views.py
apps/integrations/: models.py  serializers.py  urls.py  views.py
apps/leads/: admin.py  models.py  serializers.py  urls.py  views.py
apps/notifications/: models.py  serializers.py  urls.py  views.py
apps/opportunities/: models.py  serializers.py  urls.py  views.py
apps/organizations/: models.py  serializers.py  services.py  urls.py  views.py
apps/reports/: models.py  serializers.py  urls.py  views.py
apps/subscriptions/: constants.py  models.py  serializers.py  services.py  urls.py  views.py
apps/tasks/: models.py  serializers.py  urls.py  views.py
config/: scripts.py  urls.py
config/settings/: base.py  development.py  production.py
core/: exceptions.py  filters.py  models.py  pagination.py  renderers.py  schema.py  utils.py  viewsets.py
core/middleware/: organization_middleware.py
docs/: SRS.md
(+13 files in other folders)
