[project]
name = "crm-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Sakar Bhandari",email = "bhandarisakar@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "django-prometheus (>=2.4.1,<3.0.0)",
    "django-guardian (>=3.2.0,<4.0.0)",
    "django-auditlog (>=3.3.0,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "drf-spectacular",
    "django-filter",
    "djangorestframework-simplejwt",
    "pyotp>=2.9.0,<3.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
python = ">=3.11,<4.0"
black = "^25.9.0"
flake8 = "^7.3.0"
isort = "^7.0.0"
mypy = "^1.18.2"
pytest = "^8.4.2"
pytest-django = "^4.11.1"
coverage = "^7.11.0"

[tool.poetry.scripts]
start = "manage:main"
celery = "celery -A config worker -l info"
beat = "celery -A config beat -l info"
